Updated padding issue with tablet devices where header overlapped the article text

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -718,7 +718,7 @@ html {
 }
 
 .article .article-body {
-    padding-top: 20px;
+    padding-top: 500px;
     border-bottom: 1px solid #ccc
     height
 
